fj/src/test/resources/scope-paper/constructor7.expected
src/test/resources/scope-paper/constructor7.fj:3:3:error: constructor args (Object f) should be the fields ()
  A(Object f) {
  ^
src/test/resources/scope-paper/constructor7.fj:3:12:info: f def: Object
  A(Object f) {
           ^
src/test/resources/scope-paper/constructor7.fj:7:1:info: new A(new  ...: unknown
new A(new Object())
^
src/test/resources/scope-paper/constructor7.fj:7:7:info: new Object ...: Object
new A(new Object())
      ^
unknown
