fj/src/test/resources/scope-paper/constructor7.fj
// class/constructors.spt:test unary constructor
class A extends Object {
  A(Object f) {
    super();
  }
}
new A(new Object())
